Fix landing page spacing and modify gulpfile

--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -12,10 +12,12 @@ body {
     line-height: normal;
     overflow: hidden;
     position: relative;
+ 	margin: 0;
 }
 
 html, body{
-    min-height: 100%;
+	width: 100%;
+    height: 100%;
 }
 
 ul{
